@@ -15,6 +15,12 @@
   </a>
 </p>
 
+## Download
+- [You can download here] (https://jdk.java.net/14/)
+
+## Enable features
+You will need to add a command line argument to enable.
+    --enable-preview
 
 ## Features on this project
 - [Text Blocks](https://github.com/cristianobombazar/java-14-sample/tree/master/src/com/samples/features/textblocks)
